add animate face

--- a/animate/animate.html
+++ b/animate/animate.html
@@ -18,6 +18,7 @@
             display: flex;
             flex-direction: column;
             justify-content: center;
+            color: white;
         }
 
         section div {
@@ -28,7 +29,6 @@
             text-align: center;
             line-height: 200px;
         }
-
     </style>
 </head>
 
