--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
         div:hover {
             transform: scale(1.1);
         }
-
     </style>
 </head>
 
@@ -32,8 +31,9 @@
         <div class="flex-1 py-4 m-4 border border-gray-200 shadow">
             <h3 class="px-4 text-xl text-blue-600 font-bold capitalize tracking-widest">animate</h3>
             <ol class="mt-2 list-inside list-decimal">
-                <li class="px-4  hover:text-blue-600"><a href="./animate/counter.html">counter</a></li>
                 <li class="px-4  hover:text-blue-600"><a href="./animate/animate.html">scroll animate</a>
+                <li class="px-4  hover:text-blue-600"><a href="./animate/counter.html">counter</a></li>
+                <li class="px-4  hover:text-blue-600"><a href="./animate/face.html">face</a></li>
                 </li>
             </ol>
         </div>
