--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
     </style>
 </head>
 
-<body class="min-h-screen pb-8 text-gray-400">
+<body class="min-h-screen pb-8 text-gray-400 tracking-wider">
 
     <header class="relative w-full flex items-center justify-center bg-jigsaw overflow-hidden py-24">
         <svg class="w-8 h-8 fill-current text-blue-500" viewBox="0 0 1024 1024" xmlns="http://www.w3.org/2000/svg">
@@ -277,195 +277,200 @@
 
     <main class="container mx-auto flex flex-wrap justify-around whitespace-no-wrap">
 
-        <div class="flex-1 py-4 m-4  shadow">
+        <div class="flex-1 py-4 m-4  shadow capitalize">
             <span></span>
             <span></span>
             <span></span>
             <span></span>
-            <h3 class="px-4 text-xl text-blue-300 font-bold capitalize tracking-widest">animate</h3>
-            <ol class="relative z-10 text-lg mt-2 list-inside list-decimal">
-                <li class="px-4  hover:text-gray-100"><a href="./animate/counter.html">counter</a></li>
-                <li class="px-4  hover:text-gray-100"><a href="./animate/clock.html">clock</a></li>
-                <li class="px-4  hover:text-gray-100"><a href="./animate/face.html">face</a></li>
-                <li class="px-4  hover:text-gray-100"><a href="./animate/scroll.html">scroll</a>
+            <h3 class="px-4 text-xl text-blue-300 font-bold tracking-widest">animate</h3>
+            <ol class="relative z-10 text-lg mt-2">
+                <li class="px-4  hover:text-gray-100"><a href="./animate/counter.html">&sup1; counter</a></li>
+                <li class="px-4 text-blue-300 hover:text-blue-200"><a href="./animate/clock.html">&Theta; clock</a></li>
+                <li class="px-4 text-yellow-500  hover:text-yellow-400"><a href="./animate/face.html">&Omega; face</a>
+                </li>
+                <li class="px-4  hover:text-gray-100"><a href="./animate/scroll.html">&darr; scroll</a>
                 </li>
             </ol>
         </div>
 
-        <div class="flex-1 py-4 m-4  shadow">
+        <div class="flex-1 py-4 m-4  shadow capitalize">
             <span></span>
             <span></span>
             <span></span>
             <span></span>
-            <h3 class="px-4 text-xl text-blue-300 font-bold capitalize tracking-widest">box</h3>
-            <ol class="relative z-10 text-lg mt-2 list-inside list-decimal">
-                <li class="px-4  hover:text-gray-100"><a href="./box/cardsHover.html">cardsHover</a></li>
-                <li class="px-4  hover:text-gray-100"><a href="./box/image-gallery.html">image-gallery</a>
-                <li class="px-4  hover:text-gray-100"><a href="./box/box.html">icon-box</a></li>
-                <li class="px-4  hover:text-gray-100"><a href="./box/icon-box2.html">icon-box2</a></li>
-                <li class="px-4  hover:text-gray-100"><a href="./box/shoe.html">shoe</a></li>
-                <li class="px-4  hover:text-gray-100"><a href="./box/skewBorderBox.html">skew border
+            <h3 class="px-4 text-xl text-blue-300 font-bold tracking-widest">box</h3>
+            <ol class="relative z-10 text-lg mt-2">
+                <li class="px-4  hover:text-gray-100"><a href="./box/cardsHover.html">&loz; Cards Hover</a></li>
+                <li class="px-4  hover:text-gray-100"><a href="./box/image-gallery.html">&loz; Image Gallery</a>
+                <li class="px-4  hover:text-gray-100"><a href="./box/box.html">&loz; Icon-Box</a></li>
+                <li class="px-4  hover:text-gray-100"><a href="./box/icon-box2.html">&loz; icon-box2</a></li>
+                <li class="px-4  hover:text-gray-100"><a href="./box/shoe.html">&loz; shoe</a></li>
+                <li class="px-4  hover:text-gray-100"><a href="./box/skewBorderBox.html">&loz; skew border
                         box</a>
                 </li>
                 </li>
             </ol>
         </div>
 
-        <div class="flex-1 py-4 m-4  shadow">
+        <div class="flex-1 py-4 m-4  shadow capitalize">
             <span></span>
             <span></span>
             <span></span>
             <span></span>
-            <h3 class="px-4 text-xl text-blue-300 font-bold capitalize tracking-widest">button</h3>
-            <ol class="relative z-10 text-lg mt-2 list-inside list-decimal">
-                <li class="px-4  hover:text-gray-100"><a href="./button/button-hover.html">button
+            <h3 class="px-4 text-xl text-blue-300 font-bold tracking-widest">button</h3>
+            <ol class="relative z-10 text-lg mt-2">
+                <li class="px-4  hover:text-gray-100"><a href="./button/button-hover.html">&oplus; button
                         hover</a>
                 </li>
-                <li class="px-4  hover:text-gray-100"><a href="./button/button-hover-2.html">button hover
+                <li class="px-4  hover:text-gray-100"><a href="./button/button-hover-2.html">&oplus; button hover
                         2</a>
                 </li>
-                <li class="px-4  hover:text-gray-100"><a href="./button/button-hover-3.html">button hover
+                <li class="px-4  hover:text-gray-100"><a href="./button/button-hover-3.html">&oplus; button hover
                         3</a>
                 </li>
-                <li class="px-4  hover:text-gray-100"><a href="./button/checkbox-day-night.html">checkbox
-                        day
-                        night</a></li>
-                <li class="px-4  hover:text-gray-100"><a href="./button/dropdown.html">dropdown</a></li>
-                <li class="px-4  hover:text-gray-100"><a href="./button/glassButton.html">glass botton</a>
+                <li class="px-4  hover:text-gray-100"><a href="./button/checkbox-day-night.html">&harr; day or night</a>
                 </li>
-                <li class="px-4  hover:text-gray-100"><a href="./button/button-power.html">power
+                <li class="px-4  hover:text-gray-100"><a href="./button/dropdown.html">&darr; dropdown</a></li>
+                <li class="px-4  hover:text-gray-100"><a href="./button/glassButton.html">&oplus; glass botton</a>
+                </li>
+                <li class="px-4  hover:text-gray-100"><a href="./button/button-power.html">&oplus; power
                         switch</a>
                 </li>
-                <li class="px-4  hover:text-gray-100"><a href="./button/toggle.html">toggle button</a>
+                <li class="px-4  hover:text-gray-100"><a href="./button/toggle.html">&otimes; toggle button</a>
                 </li>
             </ol>
         </div>
 
 
-        <div class="flex-1 py-4 m-4  shadow">
+        <div class="flex-1 py-4 m-4  shadow capitalize">
             <span></span>
             <span></span>
             <span></span>
             <span></span>
-            <h3 class="px-4 text-xl text-blue-300 font-bold capitalize tracking-widest">loading</h3>
-            <ol class="relative z-10 text-lg mt-2 list-inside list-decimal">
-                <li class="px-4  hover:text-gray-100"><a href="./loading/loading1.html">loading 1</a></li>
-                <li class="px-4  hover:text-gray-100"><a href="./loading/loading2.html">loading 2</a></li>
-                <li class="px-4  hover:text-gray-100"><a href="./loading/loading-circle.html">loading
+            <h3 class="px-4 text-xl text-blue-300 font-bold tracking-widest">loading</h3>
+            <ol class="relative z-10 text-lg mt-2">
+                <li class="px-4  hover:text-gray-100"><a href="./loading/loading1.html">&hellip; loading 1</a></li>
+                <li class="px-4  hover:text-gray-100"><a href="./loading/loading2.html">&hellip; loading 2</a></li>
+                <li class="px-4  hover:text-gray-100"><a href="./loading/loading-circle.html">&omicron; loading
                         circle</a>
                 </li>
-                <li class="px-4  hover:text-gray-100"><a href="./loading/loading-plane.html">loading-plane</a>
+                <li class="px-4 text-blue-300 hover:text-blue-200"><a href="./loading/loading-plane.html">&plusmn;
+                        loading-plane</a>
                 </li>
-                <li class="px-4  hover:text-gray-100"><a href="./loading/loading-ring.html">loading-ring</a>
+                <li class="px-4  hover:text-gray-100"><a href="./loading/loading-ring.html">&omicron; loading-ring</a>
                 </li>
 
             </ol>
         </div>
 
 
-        <div class="flex-1 py-4 m-4  shadow">
+        <div class="flex-1 py-4 m-4  shadow capitalize">
             <span></span>
             <span></span>
             <span></span>
             <span></span>
-            <h3 class="px-4 text-xl text-blue-300 font-bold capitalize tracking-widest">image</h3>
-            <ol class="relative z-10 text-lg mt-2 list-inside list-decimal">
-                <li class="px-4  hover:text-gray-100"><a href="./image/3DflapImg.html">3d flap image</a>
-                <li class="px-4  hover:text-gray-100"><a href="./image/hover-long-image.html">hover-long-image</a>
+            <h3 class="px-4 text-xl text-blue-300 font-bold tracking-widest">image</h3>
+            <ol class="relative z-10 text-lg mt-2">
+                <li class="px-4  hover:text-gray-100"><a href="./image/3DflapImg.html">&bullet; 3d flap image</a>
                 </li>
-                <li class="px-4  hover:text-gray-100"><a href="./image/image-distortion.html">image-distortion</a>
+                <li class="px-4  hover:text-gray-100"><a href="./image/hover-long-image.html">&bullet;
+                        hover-long-image</a>
                 </li>
-                <li class="px-4  hover:text-gray-100"><a href="./image/layered-image.html">layered
+                <li class="px-4  hover:text-gray-100"><a href="./image/image-distortion.html">&harr;
+                        image-distortion</a>
+                </li>
+                <li class="px-4  hover:text-gray-100"><a href="./image/layered-image.html">&bullet; layered
                         image</a>
                 </li>
-                <li class="px-4  hover:text-gray-100"><a href="./image/lazeLoading.html">laze loading</a>
+                <li class="px-4  hover:text-gray-100"><a href="./image/lazeLoading.html">&bullet; laze loading</a>
                 </li>
-                <li class="px-4  hover:text-gray-100"><a href="./image/slider.html">slider</a></li>
+                <li class="px-4  hover:text-gray-100"><a href="./image/slider.html">&loz; slider</a></li>
                 </li>
             </ol>
         </div>
-        <div class="flex-1 py-4 m-4  shadow">
+        <div class="flex-1 py-4 m-4  shadow capitalize">
             <span></span>
             <span></span>
             <span></span>
             <span></span>
-            <h3 class="px-4 text-xl text-blue-300 font-bold capitalize tracking-widest">other</h3>
-            <ol class="relative z-10 text-lg mt-2 list-inside list-decimal">
-                <li class="px-4  hover:text-gray-100"><a href="./other/linear-gradient.html">linear
+            <h3 class="px-4 text-xl text-blue-300 font-bold tracking-widest">other</h3>
+            <ol class="relative z-10 text-lg mt-2">
+                <li class="px-4  hover:text-gray-100"><a href="./other/linear-gradient.html">&bullet; linear
                         gradient</a>
                 </li>
-                <li class="px-4  hover:text-gray-100"><a href="./other/login.html">login form</a></li>
-                <li class="px-4  hover:text-gray-100"><a href="./other/street.html">spot</a></li>
+                <li class="px-4  hover:text-gray-100"><a href="./other/login.html">&bullet; login form</a></li>
+                <li class="px-4  hover:text-gray-100"><a href="./other/street.html">&Omicron; spot</a></li>
             </ol>
         </div>
 
-        <div class="flex-1 py-4 m-4  shadow">
+        <div class="flex-1 py-4 m-4  shadow capitalize">
             <span></span>
             <span></span>
             <span></span>
             <span></span>
-            <h3 class="px-4 text-xl text-blue-300 font-bold capitalize tracking-widest">parallax</h3>
-            <ol class="relative z-10 text-lg mt-2 list-inside list-decimal">
-                <li class="px-4  hover:text-gray-100"><a href="./parallax/parallax.html">parallax</a></li>
-                <li class="px-4  hover:text-gray-100"><a href="./parallax/parallax-scroll.html">parallax
+            <h3 class="px-4 text-xl text-blue-300 font-bold tracking-widest">parallax</h3>
+            <ol class="relative z-10 text-lg mt-2">
+                <li class="px-4  hover:text-gray-100"><a href="./parallax/parallax.html">&asymp; parallax</a></li>
+                <li class="px-4  hover:text-gray-100"><a href="./parallax/parallax-scroll.html">&asymp; parallax
                         scroll</a>
                 </li>
             </ol>
         </div>
-        <div class="flex-1 py-4 m-4  shadow">
+        <div class="flex-1 py-4 m-4  shadow capitalize">
             <span></span>
             <span></span>
             <span></span>
             <span></span>
-            <h3 class="px-4 text-xl text-blue-300 font-bold capitalize tracking-widest">shape</h3>
-            <ol class="relative z-10 text-lg mt-2 list-inside list-decimal">
-                <li class="px-4  hover:text-gray-100"><a href="./shape/curvedHeader.html">curved
-                        header</a>
+            <h3 class="px-4 text-xl text-blue-300 font-bold tracking-widest">scroll</h3>
+            <ol class="relative z-10 text-lg mt-2">
+                <li class="px-4  hover:text-gray-100"><a href="./scroll/scrollDown.html">&darr; scroll down</a>
                 </li>
-                <li class="px-4  hover:text-gray-100"><a href="./shape/triangle.html">triangle</a></li>
-                <li class="px-4  hover:text-gray-100"><a href="./shape/wave.html">wave header</a></li>
-            </ol>
-        </div>
-        <div class="flex-1 py-4 m-4  shadow">
-            <span></span>
-            <span></span>
-            <span></span>
-            <span></span>
-            <h3 class="px-4 text-xl text-blue-300 font-bold capitalize tracking-widest">scroll</h3>
-            <ol class="relative z-10 text-lg mt-2 list-inside list-decimal">
-                <li class="px-4  hover:text-gray-100"><a href="./scroll/scrollDown.html">scroll down</a>
+                <li class="px-4  hover:text-gray-100"><a href="./scroll/scrollNav.html">&uarr; scroll nav</a>
                 </li>
-                <li class="px-4  hover:text-gray-100"><a href="./scroll/scrollNav.html">scroll nav</a>
-                </li>
-                <li class="px-4  hover:text-gray-100"><a href="./scroll/scrollSpy.html">scroll spy</a>
+                <li class="px-4  hover:text-gray-100"><a href="./scroll/scrollSpy.html">&dagger; scroll spy</a>
                 </li>
             </ol>
         </div>
 
-        <div class="flex-1 py-4 m-4  shadow">
+        <div class="flex-1 py-4 m-4  shadow capitalize">
             <span></span>
             <span></span>
             <span></span>
             <span></span>
-            <h3 class="px-4 text-xl text-blue-300 font-bold capitalize tracking-widest">text</h3>
-            <ol class="relative z-10 text-lg mt-2 list-inside list-decimal">
-                <li class="px-4  hover:text-gray-100"><a href="./text/text-clip.html">text-clip</a></li>
-                <li class="px-4  hover:text-gray-100"><a href="./text/text-growing.html">text-growing</a>
+            <h3 class="px-4 text-xl text-blue-300 font-bold tracking-widest">shape</h3>
+            <ol class="relative z-10 text-lg mt-2">
+                <li class="px-4  hover:text-gray-100"><a href="./shape/curvedHeader.html">&cong; curved
+                        header</a>
                 </li>
-                <li class="px-4  hover:text-gray-100"><a href="./text/text-logo.html">text-logo</a>
+                <li class="px-4  hover:text-gray-100"><a href="./shape/triangle.html">&Delta; triangle</a></li>
+                <li class="px-4  hover:text-gray-100"><a href="./shape/wave.html">&cong; wave header</a></li>
+            </ol>
+        </div>
+
+
+        <div class="flex-1 py-4 m-4  shadow capitalize">
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            <h3 class="px-4 text-xl text-blue-300 font-bold tracking-widest">text</h3>
+            <ol class="relative z-10 text-lg mt-2">
+                <li class="px-4  hover:text-gray-100"><a href="./text/text-clip.html">&para; text-clip</a></li>
+                <li class="px-4  text-yellow-500  hover:text-yellow-400"><a href="./text/text-growing.html">&para;
+                        text-growing</a>
                 </li>
-                <li class="px-4  hover:text-gray-100"><a href="./text/text-shadow.html">text-shadow</a>
+                <li class="px-4  hover:text-gray-100"><a href="./text/text-logo.html">&para; logo</a>
                 </li>
-                <li class="px-4  hover:text-gray-100"><a href="./text/text-typing.html">text-typing</a>
+                <li class="px-4  hover:text-gray-100"><a href="./text/text-shadow.html">&rfloor; text-shadow</a>
+                </li>
+                <li class="px-4  hover:text-gray-100"><a href="./text/star.html">&there4; star</a>
+                </li>
+                <li class="px-4  hover:text-gray-100"><a href="./text/typing.html">&ge; typing</a>
                 </li>
             </ol>
         </div>
     </main>
     <script>
-        let letters = document.querySelectorAll('#logo>path')
-        letters.forEach((letter, i) => {
-            console.log(i, letter.getTotalLength())
-        });
     </script>
 </body>
 
